--- a/views/admin/sidebar.html
+++ b/views/admin/sidebar.html
@@ -27,27 +27,27 @@
             </li>
             <li>
                 <a href="/admin/post">
-                    <i class="fa fa-list"></i> <span>博文管理</span>
+                    <i class="fa fa-list"></i> <span>Post</span>
                 </a>
             </li>
             <li>
                 <a href="/admin/page">
-                    <i class="fa fa-file"></i> <span>页面管理</span>
+                    <i class="fa fa-file"></i> <span>Page</span>
                 </a>
             </li>
             <li>
                 <a href="/admin/user">
-                    <i class="fa fa-user"></i> <span>用户管理</span>
+                    <i class="fa fa-user"></i> <span>User</span>
                 </a>
             </li>
             <li>
                 <a href="/admin/subscriber">
-                    <i class="fa fa-user"></i> <span>订阅管理</span>
+                    <i class="fa fa-user"></i> <span>Subscription</span>
                 </a>
             </li>
             <li>
                 <a href="/admin/link">
-                    <i class="fa fa-user"></i> <span>友情链接</span>
+                    <i class="fa fa-user"></i> <span>Links</span>
                 </a>
             </li>
         </ul>
