--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -25,7 +25,7 @@
                     <span class="info-box-icon bg-aqua"><i class="ion ion-ios-paper-outline"></i></span>
 
                     <div class="info-box-content">
-                        <span class="info-box-text">博文</span>
+                        <span class="info-box-text">Post</span>
                         <span class="info-box-number">{{.postCount}}</span>
                     </div>
                     <!-- /.info-box-content -->
@@ -38,7 +38,7 @@
                     <span class="info-box-icon bg-red"><i class="ion ion-ios-list-outline"></i></span>
 
                     <div class="info-box-content">
-                        <span class="info-box-text">页面</span>
+                        <span class="info-box-text">Pages</span>
                         <span class="info-box-number">{{.pageCount}}</span>
                     </div>
                     <!-- /.info-box-content -->
@@ -55,7 +55,7 @@
                     <span class="info-box-icon bg-green"><i class="ion ion-ios-pricetag-outline"></i></span>
 
                     <div class="info-box-content">
-                        <span class="info-box-text">标签</span>
+                        <span class="info-box-text">Label</span>
                         <span class="info-box-number">{{.tagCount}}</span>
                     </div>
                     <!-- /.info-box-content -->
@@ -68,7 +68,7 @@
                     <span class="info-box-icon bg-yellow"><i class="ion ion-chatbox"></i></span>
 
                     <div class="info-box-content">
-                        <span class="info-box-text">评论</span>
+                        <span class="info-box-text">Komentar</span>
                         <span class="info-box-number">{{.commentCount}}</span>
                     </div>
                     <!-- /.info-box-content -->
