--- a/views/admin/page.html
+++ b/views/admin/page.html
@@ -43,11 +43,11 @@
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
-                <small>页面管理<a class="btn btn-primary" href="/admin/new_page" target="_blank"><span class="glyphicon glyphicon-plus"></span>新增</a></small>
+                <small>Page Management<a class="btn btn-primary" href="/admin/new_page" target="_blank"><span class="glyphicon glyphicon-plus"></span>Add</a></small>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="/admin/index"><i class="fa fa-dashboard"></i> Home</a></li>
-                <li class="active"><a href="#">页面管理</a></li>
+                <li class="active"><a href="#">Page Management</a></li>
             </ol>
         </section>
 
@@ -65,11 +65,11 @@
                                 <thead>
                                 <tr>
                                     <th>ID</th>
-                                    <th>标题</th>
-                                    <th>公开</th>
-                                    <th>创建时间</th>
-                                    <th>更新时间</th>
-                                    <th>操作</th>
+                                    <th>Title</th>
+                                    <th>Public</th>
+                                    <th>Created At</th>
+                                    <th>Update At</th>
+                                    <th>Aksi</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -82,8 +82,8 @@
                                     </td>
                                     <td>{{dateFormat .CreatedAt "06-01-02 15:04"}}</td>
                                     <td>{{dateFormat .UpdatedAt "06-01-02 15:04"}}</td>
-                                    <td><a href="/admin/page/{{.ID}}/edit" target="_blank" class="btn btn-primary">编辑</a>
-                                        <a href="#" class="btn btn-danger" data-href="/admin/page/{{.ID}}/delete" data-toggle="modal" data-target="#confirm-delete">删除</a>
+                                    <td><a href="/admin/page/{{.ID}}/edit" target="_blank" class="btn btn-primary">Edit</a>
+                                        <a href="#" class="btn btn-danger" data-href="/admin/page/{{.ID}}/delete" data-toggle="modal" data-target="#confirm-delete">Delete</a>
                                     </td>
                                 </tr>
                                 {{end}}
@@ -109,14 +109,14 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                请确认
+                Please Confirm
             </div>
             <div class="modal-body">
-                确认删除该记录吗？
+                Yakin ingin hapus?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <a class="btn btn-danger btn-ok">删除记录</a>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <a class="btn btn-danger btn-ok">Hapus</a>
             </div>
         </div>
     </div>
