--- a/views/admin/subscriber.html
+++ b/views/admin/subscriber.html
@@ -43,11 +43,11 @@
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
-                <small>订阅管理<a class="btn btn-primary" href="javascript:void(0);" data-href="/admin/new_batchmail" data-toggle="modal" data-target="#confirm-delete"><span class="glyphicon glyphicon-plus"></span>群发</a></small>
+                <small>Subscriber<a class="btn btn-primary" href="javascript:void(0);" data-href="/admin/new_batchmail" data-toggle="modal" data-target="#confirm-delete"><span class="glyphicon glyphicon-plus"></span>Add</a></small>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="/admin/index"><i class="fa fa-dashboard"></i> Home</a></li>
-                <li class="active"><a href="#">订阅管理</a></li>
+                <li class="active"><a href="#">Subscriber</a></li>
             </ol>
         </section>
 
@@ -65,11 +65,11 @@
                                 <thead>
                                 <tr>
                                     <th>ID</th>
-                                    <th>邮箱</th>
-                                    <th>激活状态</th>
-                                    <th>订阅状态</th>
-                                    <th>订阅时间</th>
-                                    <th>操作</th>
+                                    <th>Email</th>
+                                    <th>Activation State</th>
+                                    <th>Subscription Status</th>
+                                    <th>Subscription Time</th>
+                                    <th>Aksi</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -87,7 +87,7 @@
                                     <td>
                                         {{if .VerifyState}}
                                         {{if .SubscribeState}}
-                                        <a href="javascript:void(0);" class="btn btn-primary btnsend" data-href="/admin/new_mail?userId={{.ID}}" data-toggle="modal" data-target="#confirm-delete">发邮件</a>
+                                        <a href="javascript:void(0);" class="btn btn-primary btnsend" data-href="/admin/new_mail?userId={{.ID}}" data-toggle="modal" data-target="#confirm-delete">Delete</a>
                                         {{end}}
                                         {{end}}
                                     </td>
@@ -115,18 +115,18 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                发送邮件
+                Send Email
             </div>
             <div class="modal-body">
                 <form id="form_data" role="form" class="form-horizontal">
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">邮件主题</label>
+                        <label class="col-sm-2 control-label">Email Subject</label>
                         <div class="col-sm-10">
                             <input name="subject" class="form-control">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">邮件内容</label>
+                        <label class="col-sm-2 control-label">Content of Email</label>
                         <div class="col-sm-10">
                             <textarea name="content" class="form-control" rows="3"></textarea>
                         </div>
@@ -134,8 +134,8 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <a class="btn btn-primary btn-ok">发送</a>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <a class="btn btn-primary btn-ok">Send</a>
             </div>
         </div>
     </div>
