--- a/views/admin/user.html
+++ b/views/admin/user.html
@@ -43,11 +43,11 @@
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
-                <small>用户管理</small>
+                <small>User Management</small>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="/admin/index"><i class="fa fa-dashboard"></i> Home</a></li>
-                <li class="active"><a href="#">用户管理</a></li>
+                <li class="active"><a href="#">User Management</a></li>
             </ol>
         </section>
 
@@ -65,11 +65,11 @@
                                 <thead>
                                 <tr>
                                     <th>ID</th>
-                                    {{/*<th>邮箱</th>*/}}
-                                    <th>管理员</th>
+                                    {{/*<th>Mailbox</th>*/}}
+                                    <th>Administrator</th>
                                     <th>github</th>
-                                    <th>注册时间</th>
-                                    <th>状态</th>
+                                    <th>Registration Time</th>
+                                    <th>Aksi</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -82,9 +82,9 @@
                                     <td>{{dateFormat .CreatedAt "06-01-02 15:04"}}</td>
                                     <td>
                                         {{if not .LockState}}
-                                        <a href="javascript:void(0);" class="btn btn-danger btnlock" data-href="/admin/user/{{.ID}}/lock">锁定</a>
+                                        <a href="javascript:void(0);" class="btn btn-danger btnlock" data-href="/admin/user/{{.ID}}/lock">Lock</a>
                                         {{else}}
-                                        <a href="javascript:void(0);" class="btn btn-primary btnlock" data-href="/admin/user/{{.ID}}/lock">解除锁定</a>
+                                        <a href="javascript:void(0);" class="btn btn-primary btnlock" data-href="/admin/user/{{.ID}}/lock">Unlock</a>
                                         {{end}}
                                     </td>
                                 </tr>
